[gd_scene load_steps=5 format=3 uid="uid://oiene1ln3h8x"]

[ext_resource type="Script" uid="uid://itacxyvevv62" path="res://scenes/levels/shop/shop_item.gd" id="1_fte3s"]
[ext_resource type="Texture2D" uid="uid://clmaxoluljc6r" path="res://images/chest.png" id="2_ehnld"]
[ext_resource type="Texture2D" uid="uid://crwabcv2g2ipd" path="res://images/chest_no.png" id="3_v3idb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehnld"]
size = Vector2(153, 123)

[node name="ShopItem" type="Node2D"]
script = ExtResource("1_fte3s")

[node name="Chest" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("2_ehnld")

[node name="ChestNo" type="Sprite2D" parent="."]
position = Vector2(3, 5)
texture = ExtResource("3_v3idb")

[node name="Description" type="Label" parent="."]
offset_left = -72.0
offset_top = -25.0
offset_right = 27.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 5
text = "BL abdlasbd asbd kasjdk jashdjksahdkj sakdjh sadhsa kdha skdhasd"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-83, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(83.5, 28.5)
shape = SubResource("RectangleShape2D_ehnld")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
